feat: add footer

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
-  <link rel="stylesheet" href="D:/rsschool-cv/stylesheet.css" />
+  <link rel="stylesheet" href="D:\rsschool-cv\stylesheet.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
 </head>
 
@@ -89,7 +89,7 @@
         <h3>Work Experience</h3>
         <div class="1stWork">
           <h4>Front-End Developer <span class="company">Freelance</span></h4>
-          <span class="period">September 2019 - up to now
+          <span class="period">February 2021 - up to now
             <span class="line">|</span> Ukraine</span>
           <ul class="work">
             <li>
@@ -117,11 +117,17 @@ var donuts = [<br>
 donuts.forEach(function(donut){<br>
 console.log(donut.type + " donuts cost $" + donut.cost + " each");<br>
 });<br>
-        </code>
-
+</code>
       </section>
     </div>
   </main>
+  <footer>
+    <ul class="footer">
+      <li><a href="https://github.com/valeriiahnoieva">GitHub Page</a></li>
+      <li>2021</li>
+      <li><a href="https://rs.school/js/"><img class="logo" src="images/rs_school_js.svg" alt="School logo" /></a></li>
+    </ul>
+  </footer>
 </body>
 
 </html>
