feat: add figure

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body>
   <main>
     <aside class="sidebar">
-      <img class="my-photo" src="images/IMG_4412.2.jpg" alt="My photo" />
+      <figure>
+        <img class="my-photo" src="images/IMG_4412.2.jpg" alt="My photo" />
+        <figcaption>Valeriia Esaulenko</figcaption>
+      </figure>
       <div class="asideInfo">
         <div class="contacts">
           <h3>Contacts</h3>
