feat: fix error

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <h3>Contacts</h3>
           <div class="link">
             C:
-            <a class="cont" href="tel:+38 063 495 03 37">+38 063 495 03 37</a>
+            <a class="cont" href="tel:+380634950337">+38 063 495 03 37</a>
           </div>
           <div class="link">
             E:
