feat: fix contact list

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <main>
-    <aside class="sidebar">
+    <section class="sidebar">
       <figure>
         <img class="my-photo" src="images/IMG_4412.2.jpg" alt="My photo" />
         <figcaption>Valeriia Esaulenko</figcaption>
@@ -19,15 +19,16 @@
       <div class="asideInfo">
         <div class="contacts">
           <h3>Contacts</h3>
-          <div class="link">
+          <ul>
+          <li class="link">
             C:
             <a class="cont" href="tel:+380634950337">+38 063 495 03 37</a>
-          </div>
-          <div class="link">
+          </li>
+          <li class="link">
             E:
             <a class="cont" href="mailto:gnoevaya.valeriya.06153@gmail.com">gnoevaya.valeriya.06153@gmail.com</a>
-          </div>
-        </div>
+          </li>
+        </ul>
         <div class="skills">
           <h3>Skills</h3>
           <ul>
@@ -45,7 +46,7 @@
           </ul>
         </div>
       </div>
-    </aside>
+    </section>
     <div class="whitepart">
       <section class="generalInfo">
         <h2>Front-End Developer</h2>
