feat: fix error

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <a class="cont" href="mailto:gnoevaya.valeriya.06153@gmail.com">gnoevaya.valeriya.06153@gmail.com</a>
           </li>
         </ul>
+        </div>
         <div class="skills">
           <h3>Skills</h3>
           <ul>
