feat: fix error

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           </ul>
         </div>
       </div>
+      </div>
     </section>
     <div class="whitepart">
       <section class="generalInfo">
