--- a/index.html
+++ b/index.html
@@ -93,19 +93,12 @@
       <section class="workExperience">
         <h3>Work Experience</h3>
         <div class="1stWork">
-          <h4>Front-End Developer <span class="company">Freelance</span></h4>
+          <h4>Front End Development Course Student at<span class="company">Rolling Scopes School</span></h4>
           <span class="period">February 2021 - up to now
             <span class="line">|</span> Ukraine</span>
           <ul class="work">
             <li>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </li>
-            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-            <li>Risus commodo viverra maecenas.</li>
-            <li>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod.
+              Currently, I have no work experience. I`ve joined RS School Front End at the end of February, 28 and now I make my first steps in acquiring proficiency in developing web applications.
             </li>
           </ul>
         </div>
