feat: fix work experience

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <span class="line">|</span> Ukraine</span>
           <ul class="work">
             <li>
-              Currently, I have no work experience. I`ve joined RS School Front End Course at the end of February, 28 and now I make my first steps in acquiring proficiency in developing web applications.
+              Currently, I have no work experience. I`ve joined RS School Front End Course at the end of February and now I make my first steps in acquiring proficiency in developing web applications.
             </li>
           </ul>
         </div>
